--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="..\..\..\sonia\utility\serialization\vector.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\simple_queue.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\streaming\array_view.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\streaming\tuple.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\streaming\type_index.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\streaming\vector.hpp" />
     <ClInclude Include="..\..\..\sonia\utility\type_durable_id.hpp" />
