--- a/projects/cmake/sonia-prime-lib/CMakeLists.txt
+++ b/projects/cmake/sonia-prime-lib/CMakeLists.txt
@@ -16,6 +16,7 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/utility/iterators/file_region_iterator.cpp
     ${BUNDLE_HOME}/sonia/utility/iterators/tar_iterator.cpp
     ${BUNDLE_HOME}/sonia/utility/iterators/archive_extract_iterator.cpp
+    ${BUNDLE_HOME}/sonia/services/local_service_registry.cpp
     ${BUNDLE_HOME}/sonia/services/durable_type_registry.cpp
     ${BUNDLE_HOME}/sonia/services/multimethod_registry.cpp
     ${BUNDLE_HOME}/sonia/services/scheduler/basic_scheduler.cpp
