--- a/projects/vs/sonia-prime/sonia-prime.vcxproj
+++ b/projects/vs/sonia-prime/sonia-prime.vcxproj
@@ -26,6 +26,8 @@
     <ClCompile Include="..\..\..\sonia\services\io\io_service_builder.cpp" />
     <ClCompile Include="..\..\..\sonia\services\local_service_registry.cpp" />
     <ClCompile Include="..\..\..\sonia\services\net\basic_connector.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\net\echo\echo_connector.cpp" />
+    <ClCompile Include="..\..\..\sonia\services\net\echo\echo_connector_builder.cpp" />
     <ClCompile Include="..\..\..\sonia\services\net\net_service_builder.cpp" />
     <ClCompile Include="..\..\..\sonia\services\net\net_service.cpp" />
     <ClCompile Include="..\..\..\sonia\services\prime_bundle.cpp" />
@@ -51,6 +53,9 @@
     <ClInclude Include="..\..\..\sonia\services\local_service_registry.hpp" />
     <ClInclude Include="..\..\..\sonia\services\net\basic_connector.hpp" />
     <ClInclude Include="..\..\..\sonia\services\net\connector.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\net\echo\echo_connector.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\net\echo\echo_connector_builder.hpp" />
+    <ClInclude Include="..\..\..\sonia\services\net\echo\echo_connector_configuration.hpp" />
     <ClInclude Include="..\..\..\sonia\services\net\net_service_builder.hpp" />
     <ClInclude Include="..\..\..\sonia\services\net\net_service_configuration.hpp" />
     <ClInclude Include="..\..\..\sonia\services\net\net_service.hpp" />
