--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -573,6 +573,9 @@
     <ClInclude Include="..\..\..\sonia\services\local_type_registry.hpp">
       <Filter>sonia.services</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\linux.hpp">
+      <Filter>sonia.utility</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
@@ -658,6 +661,12 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\services\local_type_registry.cpp">
       <Filter>sonia.services</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\services\io\io_factory.cpp">
+      <Filter>sonia.services.io</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\utility\linux.cpp">
+      <Filter>sonia.utility</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
