--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -573,6 +573,9 @@
     <ClInclude Include="..\..\..\sonia\services\local_type_registry.hpp">
       <Filter>sonia.services</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\utility\functional\hash\variant.hpp">
+      <Filter>sonia.utility\functional\hash</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
